# Game_Of_Life

./: .gitignore  README.md
labs/: gcloud_machine
labs/Lab 2/source/: hello_world_mpi_2.c  hello_world_mpi_3.c  hostfile
labs/Lab 2/source/Ubutnu with OpenMPI and OpenMP/: Ubutnu with OpenMPI and OpenMP.url
labs/Lab 3/source/: find_bug.c
labs/Lab 4/source/: find_bug.c
labs/Lab 6/source/: mpi_latency..c
source/: exercise1.c  exercise10.c  exercise2.c  exercise3.c  exercise4.c  exercise5.c  exercise6.c  exercise7.c  exercise8.c  exercise9.c
source/mycollective/: Makefile  main.c  mycollective  mycollective.c  mycollective.h
source/mycollective/utils/: utils.c  utils.h
source/project/: CMakeLists.txt  Makefile
source/project/include/: life.h  mpix.h  openMPI.h  utils.h
source/project/scripts/: cluster_cloner.sh  cluster_generator.sh  scalability_test_script.sh
source/project/src/: life.c  main.c  mpix.c  openMPI.c  utils.c
